# SteinVariationalGradientDescent

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  SVGD.h
tests/: CMakeLists.txt  benchmark_svgd.cc  distributions.h  eigen_algebra.h  test_svgd.cc
